Retrofit_Demo02_POST

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':retrofitdemo01', ':retrofitdemo02_get'
+include ':app', ':retrofitdemo01', ':retrofitdemo02_get', ':retrofitdemo03_post'
